mongo.client.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo-client
  namespace: mongo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts: 
    - mongo-client.app.openkube.io
    secretName: tls-mongo-client
spec:
  rules:
  - host: mongo-client.app.openkube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: mongo-client
          servicePort: 3000
